<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText_num1"
        android:layout_margin="5dp"
        android:editable="false"
        android:hint="@string/number_1"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|number"
        android:ems="10"
        android:id="@+id/editText_num2"
        android:layout_margin="5dp"
        android:editable="false"
        android:hint="@string/number_2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/button_add"
        android:layout_margin="5dp"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:id="@+id/button_sub"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="18dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mul"
        android:id="@+id/button_mul"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="18dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/div"
        android:id="@+id/button_div"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="18dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rem"
        android:id="@+id/button_rem"
        android:layout_margin="5dp"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/result"
        android:id="@+id/textView_result"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColor="#ff1a00"
        android:textSize="30dp" />
</LinearLayout>
